--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,34 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Military Friendly Schools</h1>
+<section>
+  <p>The following are a listing of military friendly online schools.</p>
+  <p>Click on the school's name to see their profile.</p>
+</section>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>School Name</th>
+      <th><h3>School Name</h3></th>
     </tr>
   </thead>
   <tbody>
     
-    {{#each data}}
-      <tr>
-        <td>{{school_name}}</td>
-      </tr>
+    {{#each schools}}
+      {{#if school_name}}
+        <tr>
+          <td><a href="/profile/{{nice_name}}/{{id}}">{{school_name}}</a></td>
+        </tr>
+      {{/if}}
     {{/each}}
-
 
   </tbody>
 </table>
+
+<nav>
+  <ul class="pagination">
+    <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+    {{#each pagination}}
+      <li><a href="/?offset={{offset}}">{{page}}</a></li>
+    {{/each}}
+    <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+  </ul>
+</nav>
