--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      {{{body}}}  
+    </div>
   </body>
 </html>
