--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,9 @@
 
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    
+
   </head>
   <body>
     <div class="container">
