--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -23,3 +23,9 @@
 <p>Graduate In­state Tuition: {{graduate_in_state_tuition}}</p>
 <p>Graduate Out of State Tuition: {{graduate_out_state_tuition}}</p>
 <p class="id">{{id}}</p>
+
+
+<a class="btn btn-primary" role="button" href="/?offset={{back_button}}">
+  Go Back to List
+</a>
+
